objects/Loyalty_Reward_Point__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Reward Points (Account)</relationshipLabel>
        <relationshipName>Loyalty_Reward_Points1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Loyalty Reward Points</relationshipLabel>
        <relationshipName>Loyalty_Reward_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point__c</fullName>
        <label>Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earned</fullName>
                </value>
                <value>
                    <fullName>Spent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loyalty Reward Point</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Loyalty Reward Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Reward Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>